Fix text wrapping on 1/5/10/20/... congratulation message
Fic the wrapung of the text in the congratulation message
for your 1st, 5th and every subsequent 10th offer of help
on narrow screens (previously wrapped under the smily face)

--- a/autoperry/webapp/static/webapp/autoperry.css
+++ b/autoperry/webapp/static/webapp/autoperry.css
@@ -43,6 +43,13 @@ dd {
   );
     height: 10px;
 }
+/* Hack to force the .celebration div to expand to include all of the  floated image */
 .celebration {
-
+    overflow: auto;
+    display: flex;
+    align-items: center;
+}
+.celebration img {
+    float: left;
+    padding-right: 1em;
 }
